test: 단위 테스트 작성 (CourseService, EnrollmentService, WaitlistService)